# actix-showtime-server

./: .gitignore  Cargo.toml  Procfile  README.md
migrations/: 20210820055237_migration.sql
src/: db.rs  main.rs  model.rs  routes.rs
