[package]
name = "actix-server"
version = "0.1.0"
authors = ["Scott Nicholes <scott93gps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["runtime-actix-rustls", "postgres"] }
dotenv = "0.15"